# magwi

./: Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
resources/include/: magwi.h
src/: exheader.rs  hook.rs  job_env.rs  jobs.rs  main.rs  make.rs  worker_pool.rs
src/hook/: arm.rs  error.rs  hks.rs  info.rs  kind.rs  location.rs  meta.rs  symbol_safe.rs  util.rs  writer.rs
