[package]
name = "magwi"
version = "0.1.0"
edition = "2021"

[dependencies]
binrw = "0.12.0"
console = "0.15.7"
cpp_demangle = "0.4.3"
data-encoding = "2.4.0"
enum-map = "2.6.3"
filetime = "0.2.22"
indicatif = "0.17.7"
num_cpus = "1.16.0"
object = { version = "0.32.1", features = ["elf"] }
tempfile = "3.8.0"
thiserror = "1.0.49"
